# continuum

./: pyproject.toml
.github/workflows/: ci_cd_pipeline.yml
manifests/: pvc.yml
models/: logistic_regression_model.pkl
notebooks/: Untitled.ipynb
notebooks/math/: linear_algebra.ipynb
notebooks/ml/: iris_model.ipynb  lab_utils_common.py  lab_utils_uni.py  linear_regression.ipynb  model_representation.ipynb
notebooks/ml/linear_regression/: lab_utils_common.py  lab_utils_uni.py  multiple_variable_gradient_descent.ipynb  sklearn_linear_regression_gd.ipynb
notebooks/ml/logistic_regression/: decision_boundary.ipynb  logistic_regression.ipynb  logistic_regression_cost_function.ipynb  logistic_regression_final.ipynb  logistic_regression_gradient_descent.ipynb  logistic_regression_loss_function.ipynb  logistic_regression_scikit_learn.ipynb  overfitting.ipynb  regularization.ipynb
notebooks/ml/nn/: coffee_roasting_example.ipynb  neurons_and_layers.ipynb
notebooks/mlops/w1_deploy_dl/: server-coursera.ipynb
notebooks/numpy/: python_numpy_vectorization.ipynb
notebooks/w2_data_journey/: C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
pipelines/: hello_world_pipeline.py  mnist_pipeline.py
pipelines/components/: download_mnist.py  serve_model.py  train_model.py
src/continuum/: deploy.py  train.py
src/continuum/tests/: test_training.py
