[tool.poetry]
name = "continuum"
version = "0.1.0"
description = "Project to deploy ML models through CICD"
authors = ["Andrew Tanner <andrew@drewnix.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
